; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias_skinny.c_mod_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias_skinny.c_mod_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@handlers = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @mod_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mod_handler(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %15 [
    i32 129, label %9
    i32 128, label %12
  ]

9:                                                ; preds = %3
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* @handlers, align 4
  %11 = call i32 @LibAliasAttachHandlers(i32 %10)
  br label %17

12:                                               ; preds = %3
  store i32 0, i32* %7, align 4
  %13 = load i32, i32* @handlers, align 4
  %14 = call i32 @LibAliasDetachHandlers(i32 %13)
  br label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @EINVAL, align 4
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %15, %12, %9
  %18 = load i32, i32* %7, align 4
  ret i32 %18
}

declare dso_local i32 @LibAliasAttachHandlers(i32) #1

declare dso_local i32 @LibAliasDetachHandlers(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
